--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.2</version>
+		<version>3.5.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -18,9 +18,15 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<java.version>21</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>18</java.version>
+		<projectlombok.version>1.18.36</projectlombok.version>
 	</properties>
+
+	<modules>
+		<module>stats-service</module>
+		<module>ewm-service</module>
+
+	</modules>
 
 	<build>
 		<pluginManagement>
