--- a/stats-service/stats-server/src/main/resources/application.properties
+++ b/stats-service/stats-server/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.show-sql=true
 spring.sql.init.mode=always
 spring.sql.init.platform=postgresql
 spring.sql.init.name=classpath:schema.sql
-# ????????? ??? ?????????, ? ??????????? ?? ?????????????
 spring.datasource.initialization-mode=always
+stats.service.base-url=http://localhost:9090
